--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "format": "prettier .  --write",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
     },
     "devDependencies": {
         "axios": "^1.1.2",
+        "eslint": "^8.46.0",
+        "eslint-plugin-vue": "^9.16.1",
         "laravel-vite-plugin": "^0.7.5",
+        "prettier": "3.0.0",
         "vite": "^4.0.0"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
         "vue": "^3.2.36",
-        "vue-loader": "^17.0.1"
+        "vue-loader": "^17.0.1",
+        "vue-tailwind": "^2.5.1"
     }
 }
