--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "eslint": "^8.46.0",
         "eslint-plugin-vue": "^9.16.1",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.27",
         "prettier": "3.0.0",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
+        "path": "^0.12.7",
+        "sass": "^1.64.2",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
+        "vue-router": "4",
         "vue-tailwind": "^2.5.1"
     }
 }
