--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
+        "@vuelidate/core": "^2.0.3",
+        "@vuelidate/validators": "^2.0.3",
         "path": "^0.12.7",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
